Commit all end of part 4- before starting to roll back to correct error

--- a/mysite/polls/templates/polls/index.html
+++ b/mysite/polls/templates/polls/index.html
@@ -1,7 +1,8 @@
+<h1>Question/Poll list</h1>
 {% if latest_question_list %}
     <ul>
     {% for question in latest_question_list %}
-        <li><a href="{% url 'polls:detail' question.id %}">{{ 
+        <li><a href="{% url 'polls:detail' question.id %}">Question: {{ 
 question.question_text }}</a></li>
     {% endfor %}
     </ul>
